Fixing padding issues on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -123,7 +123,9 @@ a {
   max-width: 500px; }
   @media screen and (min-width: 0) and (max-width: 46.8125em) {
     .landing-description {
-      margin-bottom: 22.5px; } }
+      margin: 0 20px;
+      margin-bottom: 22.5px;
+      padding: 0; } }
 
 .landing-links__container {
   display: flex; }
@@ -221,6 +223,10 @@ Project Container
 .project-secondary {
   font-size: 18px;
   margin-bottom: 40px; }
+  @media screen and (min-width: 0) and (max-width: 46.8125em) {
+    .project-secondary {
+      margin-left: 15px;
+      margin-right: 15px; } }
 
 .project-divider {
   border: solid 1px #fff;
